--- a/config.json
+++ b/config.json
@@ -6,8 +6,22 @@
     "load_mode": "vehicle",
     "lat_origin": 0,
     "lon_origin": 0,
-    "//": "Input raster parameters",
-    "raster_size": [128,64],
+    "//": "Raster parameters",
+    "raster_size": [256,128],
     "pixel_size": [0.5,0.5],
-    "ego_center": [0.25,0.5]
+    "ego_center": [0.25,0.5],
+    "//": "Vetorization parameters",
+    "other_agents_num": 10,
+    "max_agents_distance": 35,
+    "max_num_lanes": 10,
+    "interpolation_method":"INTER_LEN",
+    "max_points_per_lane": 20,
+    "max_num_crosswalks": 10,
+    "max_points_per_crosswalk": 20,
+    "//": "maximum radius around the AoI for which we retrieve",
+    "max_retrieval_distance": 35,
+    "//": "Model parameters",
+    "history_num_frames": 10, 
+    "history_num_ego_frames":5,
+    "future_num_frames": 5
 }
