--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "load_mode": "vehicle",
     "lat_origin": 0,
     "lon_origin": 0,
+    "frame_interval":10,
     "//": "Raster parameters",
     "raster_size": [256,128],
     "pixel_size": [0.5,0.5],
@@ -21,7 +22,11 @@
     "//": "maximum radius around the AoI for which we retrieve",
     "max_retrieval_distance": 35,
     "//": "Model parameters",
+    "model_architecture":"resnet50",
     "history_num_frames": 10, 
-    "history_num_ego_frames":5,
-    "future_num_frames": 5
+    "history_num_ego_frames":1,
+    "future_num_frames": 5,
+    "//": "Training parameters",
+    "batch_size":32,
+    "num_workers":0
 }
